--- a/src/blocks/info/info.scss
+++ b/src/blocks/info/info.scss
@@ -2,7 +2,7 @@
 	$self: &;
 	
 	&__top {
-		max-width: 1300px !important;
+		max-width: 1240px !important;
 
 		@include media('<=sm') {
 			padding-bottom: 20px;
@@ -14,6 +14,7 @@
 		margin-bottom: 60px;
 		
 		@include media('<=sm') {
+			min-height: 70px;
 			margin-bottom: 20px;
 		}
 	}
@@ -32,7 +33,13 @@
 
 	&__buttons {
 		display: flex;
-		justify-content: space-between;
+		justify-content: center;
+
+		&_wide {
+			#{$self}__button {
+				flex-grow: 1;
+			}
+		}
 
 		@include media('<=sm') {
 			display: block;
@@ -46,9 +53,10 @@
 		font-size: 13px;
 		text-transform: uppercase;
 		font-weight: 700;
-		flex-grow: 1;
-			
+		padding: 0 20px;
+		
 		@include media('<=sm') {
+			padding: 0;
 			text-align: left;
 			min-width: 50%;
 		}
@@ -57,11 +65,12 @@
 			display: block;
 			width: fit-content;
 			border-bottom: 2px solid transparent;
+			transition: border-color 0.3s;
 			padding: 0 0 40px;
 			margin: 0 auto;
 			
 			@include media('<=sm') {
-				padding: 10px 0 5px;
+				padding: 15px 0 5px;
 				margin: 0;
 			}
 		}
@@ -73,11 +82,7 @@
 
 	&__content {
 		background-color: #F8F8F8;
-		padding: 60px 0 100px;
-		
-		@include media('<=md') {
-			padding: 60px 0;
-		}
+		padding: 60px 0;
 		
 		@include media('<=sm') {
 			padding: 40px 0;
@@ -90,6 +95,7 @@
 	
 	&__block {
 		max-width: 950px;
+		background-color: #fff;
 		display: none;
 	
 		&.active {
