--- a/src/blocks/gallery/gallery.scss
+++ b/src/blocks/gallery/gallery.scss
@@ -40,6 +40,10 @@
 	&__image {
 		grid-column: span 1;
 		cursor: pointer;
+
+		&:first-child:last-child {
+			grid-column: span 2;
+		}
 		
 		@include media('<=sm') {
 
@@ -61,6 +65,10 @@
 		left: 10px;
 		right: 10px;
 		display: none;
+
+		&.swiper-pagination-lock {
+			display: none;
+		}
 		
 		@include media('<=xs') {
 			display: flex;
