--- a/src/blocks/cart/cart.scss
+++ b/src/blocks/cart/cart.scss
@@ -64,7 +64,7 @@
 			object-position: top;
 		}
 
-		&::before {
+		&[data-discount]::before {
 			display: block;
 			content: attr(data-discount);
 			background-color: #3CFFB9;
