--- a/src/templates/_card.html
+++ b/src/templates/_card.html
@@ -1,8 +1,8 @@
-<a class="feed__item card" href="./detail.html"  @@if(this.order){style="order: @@order"} >
+<div class="feed__item card" @@if(this.order){style="order: @@order"} >
 			<div class="card__tabs tab">
 				<div class="card__sliders tab__blocks">
 					<div class="card__slider tab__block swiper active" data-badge="new" data-discount="-34%">
-						<div class="swiper-wrapper">
+						<a class="swiper-wrapper" href="./detail.html">
 							<div class="card__slide swiper-slide">
 								<img src="./images/card-image-1.webp" loading="lazy" alt="">
 							</div>
@@ -15,12 +15,12 @@
 							<div class="card__slide swiper-slide">
 								<img src="./images/card-image-4.webp" loading="lazy" alt="">
 							</div>
-						</div>
+						</a>
 						<div class="card__dots"></div>
-						<span class="card__link">Смотреть весь образ</span>
+						<a class="card__link" href="./detail.html">Смотреть весь образ</a>
 					</div>
 					<div class="card__slider tab__block swiper" data-badge="new" data-discount="-20%">
-						<div class="swiper-wrapper">
+						<a class="swiper-wrapper" href="./detail.html">
 							<div class="card__slide swiper-slide">
 								<img src="./images/card-image-5.webp" loading="lazy" alt="">
 							</div>
@@ -33,22 +33,22 @@
 							<div class="card__slide swiper-slide">
 								<img src="./images/card-image-1.webp" loading="lazy" alt="">
 							</div>
-						</div>
+						</a>
 						<div class="card__dots"></div>
-						<span class="card__link">Смотреть весь образ</span>
+						<a class="card__link" href="./detail.html">Смотреть весь образ</a>
 					</div>
 				</div>
 				<div class="card__toggles tab__buttons toggle">
 					<button class="toggle__button tab__button active"></button>
 					<button class="toggle__button tab__button"></button>
-					<button class="card__favorite">
+					<a class="card__favorite" href="./">
 						<svg><use xlink:href="#icon-favorite"></use></svg>
-					</button>
+					</a>
 				</div>
 			</div>
 			<div class="card__bottom">
-				<h2 class="card__title">Спортивный топ</h2>
+				<h2 class="card__title"><a href="./detail.html">Спортивный топ</a></h2>
 				<div class="card__irrelevant">4599 ₽</div>
 				<div class="card__price">2999 ₽</div>
 			</div>
-		</a>
+		</div>
