--- a/src/blocks/card/card.scss
+++ b/src/blocks/card/card.scss
@@ -162,13 +162,16 @@
 		display: flex;
 		align-items: center;
 		justify-content: center;
-
+		text-decoration: none;
+		width: 22px;
+		height: 18px;
+		
 		svg {
 			fill: transparent;
 			stroke-width: 2;
 			stroke: #b1b1b1;
-			width: 22px;
-			height: 18px;
+			width: 100%;
+			height: 100%;
 			transition: stroke 0.2s, fill 0.2s;
 		}
 		
@@ -204,6 +207,11 @@
 			width: 100%;
 			order: 1;
 			// margin-bottom: 5px;
+		}
+
+		a {
+			text-decoration: none;
+			color: inherit;
 		}
 	}
 
